new RxScala operators
also, fix a typo, add a new (experimental) RxGroovy/RxJava operator I’d
overlooked

--- a/documentation/operators/backpressure.html
+++ b/documentation/operators/backpressure.html
@@ -242,7 +242,7 @@ id: backpressure
     </p>
   {% endlang_operator %}
 
-  {% lang_operator RxScala onBackpressureBuffer onBackpressureDrop %}
+  {% lang_operator RxScala onBackpressureBlock onBackpressureBuffer onBackpressureDrop onBackpressureLatest %}
     <p>
      <span style="color:#f00">TBD</span>
     </p>
