--- a/documentation/operators/combinelatest.html
+++ b/documentation/operators/combinelatest.html
@@ -225,7 +225,7 @@ Completed</pre></div>
      </p>
   {% endlang_operator %}
 
-  {% lang_operator RxSwift combineLatest %}
+  {% lang_operator RxSwift combineLatest withLatestFrom %}
      <p>
       <span style="color:#ff0000">TBD</span>
      </p>
