--- a/documentation/operators/do.html
+++ b/documentation/operators/do.html
@@ -487,7 +487,7 @@ Finally</pre></div>
     </p>
   {% endlang_operator %}
 
-  {% lang_operator RxScala doOnCompleted doOnEach doOnError doOnNext doOnSubscribe doOnTerminate doOnUnsubscribe finallyDo %}
+  {% lang_operator RxScala doOnCompleted doOnEach doOnError doOnNext doOnRequest doOnSubscribe doOnTerminate doOnUnsubscribe finallyDo %}
     <p>
      <span style="color:#f00">TBD</span>
     </p>
