Copying over recent changes to "develop" branch

--- a/documentation/operators.html
+++ b/documentation/operators.html
@@ -67,6 +67,7 @@
 <li><a href="https://github.com/Reactive-Extensions/Rx.NET">Rx.NET<span class="external-link"></span></a></li>
 <li><a href="/rxscala">RxScala</a></li>
 <li><a href="https://github.com/ReactiveX/RxClojure">RxClojure<span class="external-link"></span></a></li>
+<li><a href="https://github.com/kzaher/RxSwift">RxSwift<span class="external-link"></span></a></li>
 <li><a href="/languages.html">Others</a></li>
 
               </ul>
@@ -652,6 +653,7 @@ operators.</p>
 <li><a href="/documentation/operators/do.html"><code>doOnCompleted</code></a></li>
 <li><a href="/documentation/operators/do.html"><code>doOnEach</code></a></li>
 <li><a href="/documentation/operators/do.html"><code>doOnError</code></a></li>
+<li><a href="/documentation/operators/do.html"><code>doOnRequest</code></a></li>
 <li><a href="/documentation/operators/do.html"><code>doOnSubscribe</code></a></li>
 <li><a href="/documentation/operators/do.html"><code>doOnTerminate</code></a></li>
 <li><a href="/documentation/operators/do.html"><code>doOnUnsubscribe</code></a></li>
@@ -890,6 +892,7 @@ operators.</p>
 <li><a href="/documentation/operators/sum.html"><code>sumLong</code></a></li>
 <li><a href="/documentation/operators/switch.html"><strong><code>Switch</code></strong></a></li>
 <li><a href="/documentation/operators/defer.html"><code>switchCase</code></a></li>
+<li><a href="/documentation/operators/defaultifempty.html"><code>switchIfEmpty</code></a></li>
 <li><a href="/documentation/operators/switch.html"><code>switchLatest</code></a></li>
 <li><a href="/documentation/operators/flatmap.html"><code>switchMap</code></a></li>
 <li><a href="/documentation/operators/switch.html"><code>switchOnNext</code></a></li>
@@ -1014,6 +1017,7 @@ operators.</p>
 <li><a href="https://github.com/Reactive-Extensions/Rx.NET">Rx.NET<span class="external-link"></span></a></li>
 <li><a href="/rxscala">RxScala</a></li>
 <li><a href="https://github.com/ReactiveX/RxClojure">RxClojure<span class="external-link"></span></a></li>
+<li><a href="https://github.com/kzaher/RxSwift">RxSwift<span class="external-link"></span></a></li>
 <li><a href="/languages.html">Others</a></li>
 
             </ul>
