--- a/languages.html
+++ b/languages.html
@@ -67,6 +67,7 @@
 <li><a href="https://github.com/Reactive-Extensions/Rx.NET">Rx.NET<span class="external-link"></span></a></li>
 <li><a href="/rxscala">RxScala</a></li>
 <li><a href="https://github.com/ReactiveX/RxClojure">RxClojure<span class="external-link"></span></a></li>
+<li><a href="https://github.com/kzaher/RxSwift">RxSwift<span class="external-link"></span></a></li>
 <li><a href="/languages.html">Others</a></li>
 
               </ul>
@@ -126,6 +127,7 @@
 <li>Groovy: <a href="https://github.com/ReactiveX/RxGroovy">RxGroovy</a></li>
 <li>JRuby: <a href="https://github.com/ReactiveX/RxJRuby">RxJRuby</a></li>
 <li>Kotlin: <a href="https://github.com/ReactiveX/RxKotlin">RxKotlin</a></li>
+<li>Swift: <a href="https://github.com/kzaher/RxSwift">RxSwift</a></li>
 </ul>
 
 <h2 id="reactivex-for-platforms-and-frameworks">ReactiveX for platforms and frameworks</h2>
@@ -133,6 +135,7 @@
 <ul>
 <li><a href="https://github.com/ReactiveX/RxNetty">RxNetty</a></li>
 <li><a href="https://github.com/ReactiveX/RxAndroid">RxAndroid</a></li>
+<li><a href="https://github.com/kzaher/RxSwift">RxCocoa</a></li>
 </ul>
 
   </div>
@@ -163,6 +166,7 @@
 <li><a href="https://github.com/Reactive-Extensions/Rx.NET">Rx.NET<span class="external-link"></span></a></li>
 <li><a href="/rxscala">RxScala</a></li>
 <li><a href="https://github.com/ReactiveX/RxClojure">RxClojure<span class="external-link"></span></a></li>
+<li><a href="https://github.com/kzaher/RxSwift">RxSwift<span class="external-link"></span></a></li>
 <li><a href="/languages.html">Others</a></li>
 
             </ul>
