--- a/tutorials.html
+++ b/tutorials.html
@@ -67,6 +67,7 @@
 <li><a href="https://github.com/Reactive-Extensions/Rx.NET">Rx.NET<span class="external-link"></span></a></li>
 <li><a href="/rxscala">RxScala</a></li>
 <li><a href="https://github.com/ReactiveX/RxClojure">RxClojure<span class="external-link"></span></a></li>
+<li><a href="https://github.com/kzaher/RxSwift">RxSwift<span class="external-link"></span></a></li>
 <li><a href="/languages.html">Others</a></li>
 
               </ul>
@@ -257,6 +258,7 @@
 <li><a href="http://channel9.msdn.com/events/MIX/MIX11/HTM07">MIX 2011</a></li>
 <li><a href="http://channel9.msdn.com/Tags/reactive+extensions">Reactive Extensions Videos on Channel 9</a></li>
 <li><a href="http://parleys.com/play/53677646e4b0593229b85841/chapter0/about">Reactive Angular - Devoxx France 2014 - Martin Gontovnikas</a></li>
+<li><a href="https://speakerdeck.com/benjchristensen/applying-rxjava-to-existing-applications-at-philly-ete-2015">Testing Reactive Applications</a> by Ben Christensen - learn about <code>TestSubscriber</code> and <code>TestScheduler</code></li>
 </ul>
 
 <h2 id="reference-material">Reference Material</h2>
@@ -296,6 +298,7 @@
 <li><a href="https://github.com/Reactive-Extensions/Rx.NET">Rx.NET<span class="external-link"></span></a></li>
 <li><a href="/rxscala">RxScala</a></li>
 <li><a href="https://github.com/ReactiveX/RxClojure">RxClojure<span class="external-link"></span></a></li>
+<li><a href="https://github.com/kzaher/RxSwift">RxSwift<span class="external-link"></span></a></li>
 <li><a href="/languages.html">Others</a></li>
 
             </ul>
