copying over missed changes
Why doesn’t a Mac know to do a deep copy when you copy a folder?

--- a/rxscala/index.html
+++ b/rxscala/index.html
@@ -67,6 +67,7 @@
 <li><a href="https://github.com/Reactive-Extensions/Rx.NET">Rx.NET<span class="external-link"></span></a></li>
 <li><a href="/rxscala">RxScala</a></li>
 <li><a href="https://github.com/ReactiveX/RxClojure">RxClojure<span class="external-link"></span></a></li>
+<li><a href="https://github.com/kzaher/RxSwift">RxSwift<span class="external-link"></span></a></li>
 <li><a href="/languages.html">Others</a></li>
 
               </ul>
@@ -115,7 +116,7 @@
 
 <p>RxScala brings <em>Reactive Extensions</em> to Scala. Rx was first implemented for <a href="https://rx.codeplex.com">.NET</a>, and is now also available in <a href="https://github.com/ReactiveX/RxJava">Java</a>. The RxScala project is an adaptor for RxJava. Its code is in a seperate <a href="https://github.com/ReactiveX/RxScala">repository</a> and it&#39;s also distributed on <a href="http://search.maven.org/#search%7Cga%7C1%7C%22rxscala%22%20AND%20g%3A%22io.reactivex%22">Maven Central</a>.</p>
 
-<p>Get started by looking at <a href="https://github.com/ReactiveX/RxScala/blob/0.x/examples/src/test/scala/rx/lang/scala/examples/RxScalaDemo.scala">RxScalaDemo.scala</a>, the <a href="https://github.com/ReactiveX/RxScala/tree/0.x/examples/src">RxScala examples</a>, or the <a href="/rxscala/scaladoc/index.html#rx.lang.scala.Observable">Scaladoc</a>.</p>
+<p>Get started by looking at <a href="https://github.com/ReactiveX/RxScala/blob/0.x/examples/src/test/scala/examples/RxScalaDemo.scala">RxScalaDemo.scala</a>, the <a href="https://github.com/ReactiveX/RxScala/tree/0.x/examples/src">RxScala examples</a>, or the <a href="/rxscala/scaladoc/index.html#rx.lang.scala.Observable">Scaladoc</a>.</p>
 
 <p>There&#39;s also a <a href="/rxscala/comparison.html">comparison table</a> between Java Observable and Scala Observable.</p>
 
@@ -178,6 +179,7 @@
 <li><a href="https://github.com/Reactive-Extensions/Rx.NET">Rx.NET<span class="external-link"></span></a></li>
 <li><a href="/rxscala">RxScala</a></li>
 <li><a href="https://github.com/ReactiveX/RxClojure">RxClojure<span class="external-link"></span></a></li>
+<li><a href="https://github.com/kzaher/RxSwift">RxSwift<span class="external-link"></span></a></li>
 <li><a href="/languages.html">Others</a></li>
 
             </ul>
