--- a/rxscala/scaladoc/rx/lang/scala/Notification$$OnError$.html
+++ b/rxscala/scaladoc/rx/lang/scala/Notification$$OnError$.html
@@ -28,9 +28,13 @@
         </head>
         <body class="value">
       <div id="definition">
-        <a href="Notification$$OnError.html" title="Go to companion"><img src="../../../lib/object_to_class_big.png" /></a>
+        <a href="Notification$$OnError.html" title="See companion class"><img src="../../../lib/object_to_class_big.png" /></a>
         <p id="owner"><a href="../../package.html" class="extype" name="rx">rx</a>.<a href="../package.html" class="extype" name="rx.lang">lang</a>.<a href="package.html" class="extype" name="rx.lang.scala">scala</a>.<a href="Notification$.html" class="extype" name="rx.lang.scala.Notification">Notification</a></p>
-        <h1><a href="Notification$$OnError.html" title="Go to companion">OnError</a></h1> <span class="permalink">
+        <h1><a href="Notification$$OnError.html" title="See companion class">OnError</a></h1><h3><span class="morelinks"><div>
+            Related Docs:
+            <a href="Notification$$OnError.html" title="See companion class">class OnError</a>
+            | <a href="Notification$.html" class="extype" name="rx.lang.scala.Notification">package Notification</a>
+          </div></span></h3><span class="permalink">
       <a href="../../../index.html#rx.lang.scala.Notification$$OnError$" title="Permalink" target="_top">
         <img src="../../../lib/permalink.png" />
       </a>
