new operators in RxSwift

--- a/documentation/operators/subscribe.html
+++ b/documentation/operators/subscribe.html
@@ -332,4 +332,10 @@ Completed</pre></div>
     </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift subscribe %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
 </div>
