--- a/documentation/operators/from.html
+++ b/documentation/operators/from.html
@@ -709,7 +709,7 @@ Completed</pre></div>
     </p>
   {% endlang_operator %}
 
-  {% lang_operator RxSwift asObservable %}
+  {% lang_operator RxSwift from asObservable returnElements %}
     <p>
      <span style="color:#f00">TBD</span>
     </p>
