--- a/documentation/operators/interval.html
+++ b/documentation/operators/interval.html
@@ -172,4 +172,10 @@ Completed</pre></div>
     </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift interval %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
 </div>
