--- a/documentation/operators/takeuntil.html
+++ b/documentation/operators/takeuntil.html
@@ -183,4 +183,10 @@ Completed</pre></div>
      </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift takeUntil %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
 </div>
