--- a/documentation/operators/takewhile.html
+++ b/documentation/operators/takewhile.html
@@ -180,4 +180,10 @@ Completed</pre></div>
      </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift takeWhile %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
 </div>
