--- a/documentation/operators/timer.html
+++ b/documentation/operators/timer.html
@@ -201,4 +201,10 @@ Completed</pre></div>
     </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift timer %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
 </div>
