--- a/documentation/operators/zip.html
+++ b/documentation/operators/zip.html
@@ -343,4 +343,10 @@ Completed</pre></div>
      </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift zip %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
 </div>
