copying over recent changes to develop branch

--- a/documentation/operators/from.html
+++ b/documentation/operators/from.html
@@ -986,7 +986,7 @@ Completed</pre></div>
         <div class="panel-heading" role="tab" id="headingRxSwift">
           <h4 class="panel-title">
             <a data-toggle="collapse" data-parent="#accordion" href="#collapseRxSwift" aria-expanded="true" aria-controls="collapseRxSwift">
-              RxSwift <code>asObservable</code>
+              RxSwift <code>from asObservable returnElements</code>
             </a>
           </h4>
         </div>
