--- a/documentation/operators/reduce.html
+++ b/documentation/operators/reduce.html
@@ -534,7 +534,7 @@ Completed</pre></div>
         <div class="panel-heading" role="tab" id="headingRxSwift">
           <h4 class="panel-title">
             <a data-toggle="collapse" data-parent="#accordion" href="#collapseRxSwift" aria-expanded="true" aria-controls="collapseRxSwift">
-              RxSwift <code>foldl</code>
+              RxSwift <code>foldl aggregate</code>
             </a>
           </h4>
         </div>
