new operators in RxSwift v1.6

--- a/documentation/operators/debounce.html
+++ b/documentation/operators/debounce.html
@@ -261,7 +261,7 @@ Completed</pre></div>
      </p>
   {% endlang_operator %}
 
-  {% lang_operator RxSwift throttle %}
+  {% lang_operator RxSwift debounce throttle %}
      <p>
       <span style="color:#ff0000">TBD</span>
      </p>
