--- a/documentation/operators/retry.html
+++ b/documentation/operators/retry.html
@@ -349,4 +349,10 @@ subscribing</pre></div>
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift retry %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
 </div>
