--- a/documentation/operators/amb.html
+++ b/documentation/operators/amb.html
@@ -149,4 +149,10 @@ Completed</pre></div></figcaption>
      </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift amb %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
 </div>
