--- a/documentation/operators/delay.html
+++ b/documentation/operators/delay.html
@@ -385,4 +385,10 @@ Completed</pre></div></figcaption>
      </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift delaySubscription %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
 </div>
