--- a/documentation/operators/scan.html
+++ b/documentation/operators/scan.html
@@ -293,4 +293,10 @@ Completed</pre></div>
      </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift scan %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
 </div>
