--- a/documentation/operators/subscribeon.html
+++ b/documentation/operators/subscribeon.html
@@ -160,4 +160,10 @@ Completed</pre></div>
     </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift subscribeOn %}
+     <p>
+      <span style="color:#f00">TBD</span>
+     </p>
+  {% endlang_operator %}
+
 </div>
