fixing spelling error; adding "limit" as synonym for "take"

--- a/documentation/operators/flatmap.html
+++ b/documentation/operators/flatmap.html
@@ -152,7 +152,7 @@ Sequence complete</pre></div>
      <img src="images/concatMap.png" style="width:100%;" alt="concatMap" />
      <figcaption><p>
       There is also a <code>concatMap</code> operator, which is like the simpler version of the
-      <code>flatMap</code> operator, but it concatinates rather than merges the resulting
+      <code>flatMap</code> operator, but it concatenates rather than merges the resulting
       Observables in order to generate its own sequence.
      </p>
      <ul>
@@ -258,7 +258,7 @@ Sequence complete</pre></div>
      <img src="images/concatMap.png" style="width:100%;" alt="concatMap" />
      <figcaption><p>
       There is also a <code>concatMap</code> operator, which is like the simpler version of the
-      <code>flatMap</code> operator, but it concatinates rather than merges the resulting
+      <code>flatMap</code> operator, but it concatenates rather than merges the resulting
       Observables in order to generate its own sequence.
      </p>
      <ul>
@@ -453,7 +453,7 @@ Completed</pre></div>
      <img src="images/concatMap.png" style="width:100%;" alt="concatMap" />
      <figcaption><p>
       There is also a <code>concatMap</code> operator, which is like the <code>flatMap</code>
-      operator, but it concatinates rather than merges the resulting Observables in order to
+      operator, but it concatenates rather than merges the resulting Observables in order to
       generate its own sequence.
      </p><p>
       As with <code>flatMap</code>, <code>concatMap</code> works just as well if the function you
@@ -494,7 +494,7 @@ Completed</pre></div>
      <figcaption><p>
       There is also a <code>concatMapObserver</code> operator, which is like the
       <code>flatMapObserver</code> operator, in that it creates Observables to merge from both the
-      emissions and terminal notifications of the source Observable, but it concatinates rather than
+      emissions and terminal notifications of the source Observable, but it concatenates rather than
       merges these resulting Observables in order to generate its own sequence.
      </p><p>
       &ldquo;<code>selectConcatObserver</code>&rdquo; is an alias for
