copying over recent changes from "develop" branch

--- a/documentation/operators.html
+++ b/documentation/operators.html
@@ -755,6 +755,7 @@ operators.</p>
 <li><a href="/documentation/operators/count.html"><code>length</code></a></li>
 <li><a href="/documentation/operators/publish.html"><code>let</code></a></li>
 <li><a href="/documentation/operators/publish.html"><code>letBind</code></a></li>
+<li><a href="/documentation/operators/take.html"><code>limit</code></a></li>
 <li><a href="/documentation/operators/count.html"><code>LongCount</code></a></li>
 <li><a href="/documentation/operators/flatmap.html"><code>ManySelect</code></a></li>
 <li><a href="/documentation/operators/map.html"><strong><code>Map</code></strong></a></li>
