--- a/documentation/operators/debounce.html
+++ b/documentation/operators/debounce.html
@@ -538,7 +538,7 @@ Completed</pre></div>
         <div class="panel-heading" role="tab" id="headingRxSwift">
           <h4 class="panel-title">
             <a data-toggle="collapse" data-parent="#accordion" href="#collapseRxSwift" aria-expanded="true" aria-controls="collapseRxSwift">
-              RxSwift <code>throttle</code>
+              RxSwift <code>debounce throttle</code>
             </a>
           </h4>
         </div>
