--- a/documentation/operators/amb.html
+++ b/documentation/operators/amb.html
@@ -36,7 +36,7 @@ id: amb
      </p>
   {% endlang_operator %}
 
-  {% lang_operator RxCpp %}
+  {% lang_operator RxCpp amb %}
      <p>
       <span style="color:#ff0000">TBD</span>
      </p>
