--- a/documentation/operators/replay.html
+++ b/documentation/operators/replay.html
@@ -46,7 +46,7 @@ id: replay
     </p>
   {% endlang_operator %}
 
-  {% lang_operator RxCpp publish_synchronized %}
+  {% lang_operator RxCpp publish_synchronized replay %}
     <p>
      <span style="color:#f00">TBD</span>
     </p>
