--- a/documentation/operators/zip.html
+++ b/documentation/operators/zip.html
@@ -46,7 +46,7 @@ id: zip
     </p>
   {% endlang_operator %}
 
-  {% lang_operator RxCpp %}
+  {% lang_operator RxCpp zip %}
      <p>
       <span style="color:#ff0000">TBD</span>
      </p>
