--- a/documentation/operators/buffer.html
+++ b/documentation/operators/buffer.html
@@ -44,7 +44,7 @@ id: buffer
 <h2>Language-Specific Information:</h2>
 
 <div class="panel-group operators-by-language" id="accordion" role="tablist" aria-multiselectable="true">
-  {% lang_operator RxCpp buffer %}
+  {% lang_operator RxCpp buffer pairwise %}
     <p>
     RxCpp implements two variants of <span class="operator">Buffer</span>:
     </p>
