comment-out misleading section of concat operator page

--- a/documentation/operators/concat.html
+++ b/documentation/operators/concat.html
@@ -21,6 +21,7 @@ id: concat
      so forth, if there are more than two).
     </p></figcaption>
    </figure>
+<!-- REMOVING THIS SECTION AS CONFUSING AND MISLEADING
    <figure>
     <img src="images/concat.hot.png"  style="width:100%;" alt="Concat" />
     <figcaption><p>
@@ -32,6 +33,7 @@ id: concat
      of the error notification has not yet begun to be concatenated to that resulting Observable.
     </p></figcaption>
    </figure>
+END REMOVED SECTION -->
    <p>
     In some ReactiveX implementations there is also a <span class="operator">ConcatMap</span>
     operator (a.k.a. <code>concat_all</code>, <code>concat_map</code>,
