copying over changes from develop branch

--- a/community.html
+++ b/community.html
@@ -135,12 +135,14 @@
 <ul>
 <li><a href="http://stackoverflow.com/questions/tagged/rxjs">StackOverflow rxjs</a></li>
 <li><a href="https://groups.google.com/forum/#!forum/rxjs">Google Group RxJS</a></li>
+<li><a href="https://gitter.im/Reactive-Extensions/RxJS">Gitter RxJS room</a></li>
 </ul>
 
 <h2 id="rx.net">Rx.NET</h2>
 
 <ul>
 <li><a href="http://rx.codeplex.com/discussions">Discussion forum on Codeplex</a></li>
+<li><a href="https://gitter.im/Reactive-Extensions/Rx.NET">Gitter Rx.NET room</a></li>
 </ul>
 
 <h2 id="rxcpp">RxCpp</h2>
