RxJS 3.0 changes and some new tutorials/links

--- a/documentation/operators/catch.html
+++ b/documentation/operators/catch.html
@@ -277,10 +277,7 @@ Sequence complete</pre></div>
        <li><code>rx.lite.js</code></li>
        <li><code>rx.lite.compat.js</code></li>
       </ul>
-      <p>
-       For those browsers (e.g. Internet Explorer before IE9) for which the name &ldquo;catch&rdquo;
-       creates a conflict, there is also an alias called <code>catchException</code>
-      </p></figcaption>
+      </figcaption>
      </figure>
      <h4><code>onErrorResumeNext</code></h4>
      <figure>
