--- a/documentation/operators/empty-never-throw.html
+++ b/documentation/operators/empty-never-throw.html
@@ -118,10 +118,10 @@ error: error - badness
      </ul>
   {% endlang_operator %}
 
-  {% lang_operator RxJS empty never throw throwError %}
+  {% lang_operator RxJS empty never throw %}
      <p>
       RxJS implements these operators as <code>empty</code>, <code>never</code>, and
-      <code>throw</code> (alias <code>throwError</code>).
+      <code>throw</code>.
      </p>
      <h4>Sample Code</h4>
      <div class="code javascript"><pre>
@@ -174,7 +174,7 @@ Error: Error: error!</pre></div>
       <li><code>rx.lite.compat.js</code></li>
      </ul>
      <p>
-      <code>throw</code>/<code>throwError</code> is found in the following distributions:
+      <code>throw</code> is found in the following distributions:
      </p>
      <ul>
       <li><code>rx.js</code></li>
